fixes after scrollbar fix; create visibilitySpy;

--- a/client/components/PresentsContainer/presents-container.less
+++ b/client/components/PresentsContainer/presents-container.less
@@ -3,6 +3,8 @@
 #presents-container {
   padding: 15px;
   text-align: center;
+  position: relative;
+  min-height: 100%;
 
   .dimmer {
     z-index: @z-index-present-container-dimmer;
