--- a/components/EventContainer/event-container.less
+++ b/components/EventContainer/event-container.less
@@ -68,6 +68,6 @@
 
 @media (max-width: @media-padded-max-width) {
   .sidebar-visible #event-container {
-    margin-left: 0;
+    padding-left: 0;
   }
 }
